--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,50 +1,45 @@
-<header role=banner>
-  <nav class="navbar navbar-default" role=navigation>
-    <div class="container">
-      <div class=navbar-header>
-        <button class=navbar-toggle data-target="#navbar-collapse" data-toggle=collapse type=button>
-          <span class=sr-only>Toggle navigation</span>
-          <span class=icon-bar></span>
-          <span class=icon-bar></span>
-          <span class=icon-bar></span>
-        </button>
-      </div>
-      <div class="collapse navbar-collapse center" id=navbar-collapse>
-        <ul class="navbar-left nav navbar-nav">
-          <li>
-            <a >
-              <i class="fa fa-home"></i>
-            </a>
-          </li>
-        </ul>
-        <ul class="navbar-right nav navbar-nav">
-          <li class=dropdown>
-            <a aria-expanded=false class=dropdown-toggle data-toggle=dropdown role=button>
-              <i class="fa fa-book"></i>{{selectbook}}
-              <span class=caret></span>
-            </a>
-            <ul class=dropdown-menu role=menu>
-           
-                <li *ngFor="let book of allBooks">
-                  <a (click)="selectBook(book.attributes.name,book.id)">{{book.attributes.name}}</a>
-                </li>
-            </ul>
-          </li>
-          <li class=dropdown>
-            <a aria-expanded=false class=dropdown-toggle data-toggle=dropdown role=button>
-              <i class="fa fa-language"></i> {{selectLan}}
-              <span class=caret></span>
-            </a>
-            <ul class=dropdown-menu role=menu>
-             
-                <li *ngFor="let languages of allLanguages">
-                  <a (click)="selectLanguage(languages.attributes.name, languages.id)">{{languages.attributes.name}}</a>
-                </li>
-        
-            </ul>
-          </li>
-        </ul>
-      </div>
+<div>
+  <div class="header tc relative">
+      <span class="l p25 absolute kg-gray-dark ng-binding" style="margin-left: 5%;">
+          <i class="fas fa-home"></i>
+          <!-- <i class="fas fa-chevron-up flip"></i> -->
+        </span>
+    <span class="l p25 absolute kg-gray-dark ng-binding" style="margin-left: 25%;">
+      <i class="fas fa-book"></i>{{selectbook}}
+      <i class="fas fa-chevron-up flip" (click)="Books()"></i>
+    </span>
+    <span class="l p25 absolute kg-gray-dark ng-binding" style="margin-left: 75%;">
+      <i class="fas fa-language"></i> {{selectLan}}
+      <i class="fas fa-chevron-up flip" (click)="Languages()"></i>
+    </span>
+    <div class="dib progress pill my25 kg-bg-gray-light">
+      <div class="kg-bg-gray pill"> </div>
     </div>
-  </nav>
-</header>
+    <!-- <span class="r mt15 absolute tc pill">
+      <a class="m10 db share">
+        <i class="fas fa-share-alt"></i>
+      </a>
+      <a href="" class="m10 db pill kg-bg-gray-dark share kg-gray-light">
+        <i class="fab fa-facebook-f v-mid"></i>
+      </a>
+    </span> -->
+  </div>
+
+  <div class="px100 py25 kg-bg-gray-light ng-hide" *ngIf="books">
+
+    <span class="w33 dib pill kg-bg-white-hover ng-scope" *ngFor="let book of allBooks" [routerLink]="['/home', book.id]" routerLinkActive="active">
+
+      <a class="w100 dib pill-inside ng-binding" (click)="selectBook(book.attributes.name,book.id, '/home')"> {{book.attributes.name}}</a>
+    </span>
+  </div>
+  <div class="px100 py25 kg-bg-gray-light ng-hide" *ngIf="language">
+    <span class="w33 dib pill kg-bg-white-hover ng-scope" *ngFor="let lang of selectedBookLanguauageTranslations" >
+
+      <a class="w100 dib pill-inside ng-binding" (click)="selectLanguage(lang.attributes.name, lang.id)"> {{lang.attributes.name}}</a>
+    </span>
+
+  </div>
+
+
+
+</div>
