--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,60 @@
-<p>
-  home works!
-</p>
+<div>
+  <div class="header tc relative">
+    <span class="l p25 absolute kg-gray-dark ng-binding" style="margin-left: 5%;">
+      <i class="fas fa-home"></i>
+      <!-- <i class="fas fa-chevron-up flip"></i> -->
+    </span>
+    <span class="l p25 absolute kg-gray-dark ng-binding" style="margin-left: 25%;">
+      <i class="fas fa-book"></i>{{selectbook}}
+      <i class="fas fa-chevron-up flip" (click)="Books()"></i>
+    </span>
+    <span class="l p25 absolute kg-gray-dark ng-binding" style="margin-left: 75%;">
+      <i class="fas fa-language"></i> {{selectLan}}
+      <i class="fas fa-chevron-up flip" (click)="Languages()"></i>
+    </span>
+    <div class="dib progress pill my25 kg-bg-gray-light">
+      <div class="kg-bg-gray pill"> </div>
+    </div>
+    <!-- <span class="r mt15 absolute tc pill">
+        <a class="m10 db share">
+          <i class="fas fa-share-alt"></i>
+        </a>
+        <a href="" class="m10 db pill kg-bg-gray-dark share kg-gray-light">
+          <i class="fab fa-facebook-f v-mid"></i>
+        </a>
+      </span> -->
+  </div>
+
+  <div class="px100 py25 kg-bg-gray-light ng-hide" *ngIf="books">
+
+    <span class="w33 dib pill kg-bg-white-hover ng-scope" *ngFor="let book of allBooks" [routerLink]="['/home', book.id]" routerLinkActive="active">
+
+      <a class="w100 dib pill-inside ng-binding" (click)="selectBook(book.attributes.name,book.id, '/home')"> {{book.attributes.name}}</a>
+    </span>
+  </div>
+  <div class="px100 py25 kg-bg-gray-light ng-hide" *ngIf="language">
+    <span class="w33 dib pill kg-bg-white-hover ng-scope" *ngFor="let lang of selectedBookLanguauageTranslations">
+
+      <a class="w100 dib pill-inside ng-binding" (click)="selectLanguage(lang.attributes.name, lang.id)"> {{lang.attributes.name}}</a>
+    </span>
+
+  </div>
+
+
+
+</div>
+<div class="row .bg-light">
+  <div class="col-md-6 align">
+    <div class="thumbnail" *ngFor="let banner of images">
+      {{banner|json}}
+      <img [src]="banner.imageurl">
+      <div class="caption">
+        <h3>
+          <a href="#" class="btn btn-primary">{{banner.resource}}</a>
+        </h3>
+        <!-- <p></p>
+          <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p> -->
+      </div>
+    </div>
+  </div>
+</div>
