--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -63,7 +63,7 @@
           <p class="mx144">
             <span class="db ng-scope">
 
-              <span class="ng-binding ng-scope" *ngIf="currentPageContent.paragraph"> {{currentPageContent.paragraph["content:paragraph"]["content:text"]}} </span>
+              <span class="ng-binding ng-scope"> {{currentPageContent.paragraph["content:paragraph"]["content:text"]}} </span>
 
             </span>
 
