--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -72,7 +72,7 @@
         </div>
         <div *ngIf="Cards!=''">
           <div *ngFor="let card of Cards">
-            <!-- {{card | json}} -->
+            {{card | json}}
             <!-- <span><h4>{{label.label['content:text']}}</h4></span>
               <p>{{label['content:paragraph']['content:text']}}</p> -->
             <span>
