--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -90,7 +90,7 @@
             </span>
             <p class="mx144 ng-scope"  dir="pageGetparameters.dir">{{card.content}}</p>
             <!-- {{card.localImage|json}} -->
-            <img *ngIf="card.localImage!=''" [src]="card.localImage" width="auto" height="auto" style="margin-left: 7%;">
+            <img *ngIf="card.localImage!=''" [src]="card.localImage" width="50%" height="auto" style="margin-left: 22%;">
 
           </div>
         </div>
