--- a/src/app/shared/sharing-modal/sharing-modal.component.html
+++ b/src/app/shared/sharing-modal/sharing-modal.component.html
@@ -1,3 +1,13 @@
+<span class="r mt15 absolute tc pill">
+  <a class="m10 db share">
+    <i class="fas fa-share-alt" data-toggle="modal" data-target="#share" href="#"></i>
+  </a>
+  <a  href="javascript:void(0)" target="_blank" class="m10 db pill kg-bg-gray-dark share kg-gray-light" (click)="shareTo('FACEBOOK')">
+    <i class="fab fa-facebook-f v-mid"></i>
+  </a>
+</span>
+
+
 <div aria-hidden="false" class="modal fade in" id="share" role="dialog" tabindex="-1" >
   <div class="modal-dialog">
     <div class="modal-content">
@@ -5,28 +15,28 @@
         <button aria-label="Close" class="close" data-dismiss="modal" type="button">
           <div class="fa fa-close"></div>
         </button>
-        <h4 class="modal-title">
+        <h4 class="modal-title" align="left">
           <div class="fa fa-share-alt"></div>
         </h4>
       </div>
       <div class="modal-body">
         <form class="form-horizontal">
-          <div class="form-group">
+          <div class="form-group" align="left">
             <label class="col-sm-2 control-label"></label>
             <div class="col-sm-10 col-sm-offset-2">
               <div class="btn-group">
                 
-                <a target="_blank" title="Twitter" class="btn btn-default" href="javascript:void(0)" target="_blank" (click)="shareTo('TWITTER')">
+                <a  title="Twitter" class="btn btn-default" href="javascript:void(0)" target="_blank" (click)="shareTo('TWITTER')">
                   <div class="fa fa-twitter fa-lg"></div>
                 </a>
-                <a target="_blank" title="Facebook" class="btn btn-default" href="javascript:void(0)" target="_blank" (click)="shareTo('FACEBOOK')">
+                <a  title="Facebook" class="btn btn-default" href="javascript:void(0)" target="_blank" (click)="shareTo('FACEBOOK')">
                   <div class="fa fa-facebook fa-lg"></div>
                 </a>
-                <a target="_blank" title="Google+" class="btn btn-default" href="javascript:void(0)" target="_blank" (click)="shareTo('GOOGLEPLUS')">
+                <a  title="Google+" class="btn btn-default" href="javascript:void(0)" target="_blank" (click)="shareTo('GOOGLEPLUS')">
                   <div class="fa fa-google-plus fa-lg"></div>
                 </a>
                 <a class="btn btn-default" href="javascript:void(0)" target="_blank" (click)="shareTo('MAILTO')"
-                  target="_blank" title="Email">
+                   title="Email">
                   <div class="fa fa-envelope fa-lg"></div>
                 </a>
               </div>
