--- a/src/app/shared/sharing-modal/sharing-modal.component.html
+++ b/src/app/shared/sharing-modal/sharing-modal.component.html
@@ -8,7 +8,7 @@
 </span>
 
 
-<div aria-hidden="false" class="modal fade in" id="share" role="dialog" tabindex="-1" >
+<div aria-hidden="false" style="display:none" class="modal fade in" id="share" role="dialog" tabindex="-1" >
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
