--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,27 +15,20 @@
     <div class="dib progress pill my25 kg-bg-gray-light">
       <div class="kg-bg-gray pill"> </div>
     </div>
-    <!-- <span class="r mt15 absolute tc pill">
-      <a class="m10 db share">
-        <i class="fas fa-share-alt"></i>
-      </a>
-      <a href="" class="m10 db pill kg-bg-gray-dark share kg-gray-light">
-        <i class="fab fa-facebook-f v-mid"></i>
-      </a>
-    </span> -->
+   
   </div>
 
   <div class="px100 py25 kg-bg-gray-light ng-hide" *ngIf="books">
 
-    <span class="w33 dib pill kg-bg-white-hover ng-scope" *ngFor="let book of allBooks" [routerLink]="['/home', book.id]" routerLinkActive="active">
+    <span class="w33 dib pill kg-bg-white-hover ng-scope" *ngFor="let book of allBooks" >
 
-      <a class="w100 dib pill-inside ng-binding" (click)="selectBook(book.attributes.name,book.id, '/home')"> {{book.attributes.name}}</a>
+      <a class="w100 dib pill-inside ng-binding" (click)="selectBook(book)"> {{book.attributes.name}}</a>
     </span>
   </div>
   <div class="px100 py25 kg-bg-gray-light ng-hide" *ngIf="language">
-    <span class="w33 dib pill kg-bg-white-hover ng-scope" *ngFor="let lang of selectedBookLanguauageTranslations" >
+    <span class="w33 dib pill kg-bg-white-hover ng-scope" *ngFor="let lang of selectedBookLanguauageTranslations">
 
-      <a class="w100 dib pill-inside ng-binding" (click)="selectLanguage(lang.attributes.name, lang.id)"> {{lang.attributes.name}}</a>
+      <a class="w100 dib pill-inside ng-binding" (click)="selectLanguage(lang)">{{lang.attributes.name}}</a>
     </span>
 
   </div>
@@ -43,3 +36,4 @@
 
 
 </div>
+<router-outlet></router-outlet>
