--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,41 +1,4 @@
-<div>
-  <div class="header tc relative">
-    <span class="l p25 absolute kg-gray-dark ng-binding" style="margin-left: 5%;">
-      <i class="fas fa-home"></i>
-      
-    </span>
-    <span class="l p25 absolute kg-gray-dark ng-binding" style="margin-left: 25%;">
-      <i class="fas fa-book"></i>{{selectbook}}
-      <i class="fas fa-chevron-up flip" (click)="Books()"></i>
-    </span>
-    <span class="l p25 absolute kg-gray-dark ng-binding" style="margin-left: 75%;">
-      <i class="fas fa-language"></i> {{selectLan}}
-      <i class="fas fa-chevron-up flip" (click)="Languages()"></i>
-    </span>
-    <div class="dib progress pill my25 kg-bg-gray-light">
-      <div class="kg-bg-gray pill"> </div>
-    </div>
-   
-  </div>
-
-  <div class="px100 py25 kg-bg-gray-light ng-hide" *ngIf="books">
-
-    <span class="w33 dib pill kg-bg-white-hover ng-scope" *ngFor="let book of allBooks" [routerLink]="['/home', book.id]" routerLinkActive="active">
-
-      <a class="w100 dib pill-inside ng-binding" (click)="selectBook(book.attributes.name,book.id, '/home')"> {{book.attributes.name}}</a>
-    </span>
-  </div>
-  <div class="px100 py25 kg-bg-gray-light ng-hide" *ngIf="language">
-    <span class="w33 dib pill kg-bg-white-hover ng-scope" *ngFor="let lang of selectedBookLanguauageTranslations">
-
-      <a class="w100 dib pill-inside ng-binding" (click)="selectLanguage(lang.attributes.name, lang.id)"> {{lang.attributes.name}}</a>
-    </span>
-
-  </div>
-
-
-
-</div>
+<!-- <app-header></app-header> -->
 <div class="row .bg-light">
   <div class="col-md-6 align">
     <div class="thumbnail" *ngFor="let banner of images">
