--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
       <p>{{banner.description}}</p>
       <div class="caption">
         <h3>
-          <a href="#" class="btn btn-primary">{{banner.resource}}</a>
+          <a [routerLink]="" class="btn btn-primary">{{banner.resource}}</a>
         </h3>
         <!-- <p></p>
           <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p> -->
