--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -39,12 +39,12 @@
 <div class="row .bg-light">
   <div class="col-md-6 align">
     <div class="thumbnail" *ngFor="let banner of images;let i =index">
-     
+     <!-- {{banner | json}} -->
       <!-- <img [src]="banner.imageurl"> -->
       <img [src]="banner.SrcImg" style="width: 100%;">
       <p>{{banner.description}}</p>
       <div class="caption">
-        <h3 (click)="navigateToPage(i)">
+        <h3 (click)="navigateToPage(banner.resourceId)">
           <a href="javascript:void(0)"  class="btn btn-primary">{{banner.resource}}</a>
         </h3>
         <!-- <p></p>
