--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -29,6 +29,7 @@
     width: auto; /* Set a small width */
     /*max-width: 100px;*/
     height: auto;
+    
 }
 
 .center {
@@ -44,5 +45,58 @@
     margin-right:180px;
 }
 .back{
-    background-color: grey;
+    background-color: #000;
+}
+
+
+.container1 {
+    position: relative;
+    width: 100%;
+   
+}
+
+.image {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+  border: 1px solid lightgray;
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.container1:hover .image {
+  opacity: 0.1;
+}
+
+.container1:hover .middle {
+  opacity: 1;
+}
+
+.text {
+  background-color: #4CAF50;
+  color: white;
+  font-size: 16px;
+  padding: 16px 32px;
+}
+
+.custoum{
+    margin-left: 27%;
+}
+
+.row{margin: 20px 30px;}
+
+.RowHeaderCSS{
+    margin-left: 25%
 }
