--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -100,3 +100,10 @@
 .RowHeaderCSS{
     margin-left: 25%
 }
+
+
+@media only screen and (max-width: 768px) {
+    .RowHeaderCSS{
+        margin-left: 0%
+    }
+}
