--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,26 +1,26 @@
 <div>
   <div class="header tc relative">
-      <span class="l p25 absolute kg-gray-dark ng-binding" style="margin-left: 5%;">
-          <i class="fas fa-home"></i>
-          <!-- <i class="fas fa-chevron-up flip"></i> -->
-        </span>
+    <span class="l p25 absolute kg-gray-dark ng-binding" style="margin-left: 5%;">
+      <i class="fas fa-home"></i>
+      <!-- <i class="fas fa-chevron-up flip"></i> -->
+    </span>
     <span class="l p25 absolute kg-gray-dark ng-binding" style="margin-left: 25%;">
       <i class="fas fa-book"></i>{{selectedLookup.bookname}}
       <i class="fas fa-chevron-up flip" (click)="expandBookDropdown()"></i>
     </span>
     <span class="l p25 absolute kg-gray-dark ng-binding" style="margin-left: 75%;">
-      <i class="fas fa-language"></i> {{this.selectedLookup.language}}
+      <i class="fas fa-language"></i> {{selectedLookup.language}}
       <i class="fas fa-chevron-up flip" (click)="expandLanguageDropdown()"></i>
     </span>
     <div class="dib progress pill my25 kg-bg-gray-light">
       <div class="kg-bg-gray pill"> </div>
     </div>
-   
+
   </div>
 
   <div class="px100 py25 kg-bg-gray-light ng-hide" *ngIf="isBooksSelected">
 
-    <span class="w33 dib pill kg-bg-white-hover ng-scope" *ngFor="let book of allBooks" >
+    <span class="w33 dib pill kg-bg-white-hover ng-scope" *ngFor="let book of allBooks">
 
       <a class="w100 dib pill-inside ng-binding" (click)="selectBookFromDropdown(book)"> {{book.attributes.name}}</a>
     </span>
@@ -33,7 +33,6 @@
 
   </div>
 </div>
-
 
 <!-- <app-header></app-header> -->
 <div class="row bg-light">
