--- a/src/app/shared/sharing-modal/sharing-modal.component.html
+++ b/src/app/shared/sharing-modal/sharing-modal.component.html
@@ -1,9 +1,8 @@
 <span class="r mt15 absolute tc pill">
   <a class="m10 db share">
-    <i class="fas fa-share-alt" data-toggle="modal"  data-target="#share" href="#"></i>
+    <i class="fas fa-share-alt" data-toggle="modal" data-target="#share" href="#"></i>
   </a>
-  <a  href="javascript:void(0)" target="_blank" class="m10 db pill kg-bg-gray-dark share kg-gray-light" 
-  (click)="shareTo('FACEBOOK')">
+  <a  href="javascript:void(0)" target="_blank" class="m10 db pill kg-bg-gray-dark share kg-gray-light" (click)="shareTo('FACEBOOK')">
     <i class="fab fa-facebook-f v-mid"></i>
   </a>
 </span>
@@ -13,12 +12,12 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <button aria-label="Close" class="close" data-dismiss="modal" type="button">
-          <div class="fa fa-close"></div>
-        </button>
-        <h4 class="modal-title" align="left">
+       <div class="modal-title" align="left">
           <div class="fa fa-share-alt"></div>
-        </h4>
+          <button type="button" class="close btn-trans" data-dismiss="modal" >
+            <div class="fa fa-close"></div>
+          </button>
+        </div>
       </div>
       <div class="modal-body">
         <form class="form-horizontal">
@@ -48,7 +47,7 @@
               <div class="fa fa-link fa-lg"></div>
             </label>
             <div class="col-sm-10">
-              <input name="share-link" id="share-link" [value]="currentUrl" class="form-control">
+              <input name="share-link" id="share-link" [value] = "currentUrl" class="form-control">
             
             </div>
           </div>
