--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
-<!-- 
-<app-header></app-header> -->
-<router-outlet></router-outlet>
+<router-outlet [hidden]="true"></router-outlet>
+<app-loader *ngIf = "showLoader" class="loader-center" ></app-loader>
